welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: '=' expected but identifier found.
def int blueTicket(int a, int b, int c) {
        ^blueTicket:11: error: illegal start of simple expression
 }
 ^